Last update before major styling effort

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
 	<title>ToDo App</title>
 	<meta charset="utf-8">
-	<meta content="" name="description">
+	<meta content="A ToDo app created with AJAX that allows adding, deleting, and checking." name="description">
 	<meta content="David Frankel" name="author">
 	<link href="style.css" rel="stylesheet" type="text/css">
+	<script src="script.js"></script>
 </head>
 <body>
 	<div id="content">
@@ -21,7 +22,5 @@
 			</ul>
 		</div>
 	</div>
-	<!-- Prevents issues with forms stuff -->
-	<script src="script.js"></script>
 </body>
 </html>
